Lines of pseudocode no longer wrap, instead there is a scoll bar at the bottom to go left to right when that is needed. Issue #227

--- a/HighwayDataExaminer/hdx.css
+++ b/HighwayDataExaminer/hdx.css
@@ -87,6 +87,8 @@
     border-spacing: 0;
     background-color: rgb(30, 179, 238);
     border: 2px solid black;
+    max-width:300px;
+    overflow-x: scroll;
 }
 
 
